Add VM arguments needed to run the program to README